--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     <div id="Backbutton" onclick="topSite()">
         <i class="bi bi-arrow-up-circle"></i>
     </div>
-    <script src="C:\Users\Olowek\Downloads\Programowanie\Strony WWW\kanalohistorii.github.io\assets\js\main.js">
+    <script src="\assets\js\main.js">
 
     </script>
     <div id="Start">
