--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
             </p>
             Tym razem zajmiemy się zagadnieniami związanymi z Imperium Karolingów. Jak wiadomo to państwo założone zostało przez Karola Wielkiego (stąd ta nazwa).
             W czasach wczesnego średniowiecza odgrywało zdecydowaną rolę w polityce europejskiej...
-            <a id="Odnosnik_A1" target="_self" href="C:\Users\Olowek\Downloads\Programowanie\Strony WWW\kanalohistorii.github.io\assets\vendor\A1.html">
+            <a id="Odnosnik_A1" target="_self" href="assets/vendor/A1.html">
                 Czytaj więcej
             </a>
         </article>
@@ -110,24 +110,24 @@
         </h6>
         <div class="Responsive">
             <div class="Ramka">
-                <a target="_self" href="C:\Users\Olowek\Downloads\Programowanie\Strony WWW\kanalohistorii.github.io\assets\img\Napoleon_obraz.png">
-                    <img src="C:\Users\Olowek\Downloads\Programowanie\Strony WWW\kanalohistorii.github.io\assets\img\Napoleon_obraz.png" alt="Napoleon" class="Obrazek"/>
+                <a target="_self" href="assets/img/Napoleon_obraz.png">
+                    <img src="assets/img/Napoleon_obraz.png" alt="Napoleon" class="Obrazek"/>
                 </a>
                 <div class="Opis1">Napoleon koronujący Józefinę na cesarzową.<br>(Kliknij, żeby zobaczyć w nowym oknie)</div>
             </div>
         </div>
         <div class="Responsive">
             <div class="Ramka">
-                <a target="_self" href="C:\Users\Olowek\Downloads\Programowanie\Strony WWW\kanalohistorii.github.io\assets\img\Piramidy.png">
-                    <img src="C:\Users\Olowek\Downloads\Programowanie\Strony WWW\kanalohistorii.github.io\assets\img\Piramidy.png" alt="Piramidy_w_Gizie" class="Obrazek"/>
+                <a target="_self" href="assets/img/Piramidy.png">
+                    <img src="assets/img/Piramidy.png" alt="Piramidy_w_Gizie" class="Obrazek"/>
                 </a>
                 <div class="Opis2">Piramidy w Gizie czyli jeden z siedmiu cudów świata.<br>(Kliknij, żeby zobaczyć w nowym oknie)</div>
             </div>
         </div>
         <div class="Responsive">
             <div class="Ramka">
-                <a target="_self" href="C:\Users\Olowek\Downloads\Programowanie\Strony WWW\kanalohistorii.github.io\assets\img\Juliusz.png">
-                    <img src="C:\Users\Olowek\Downloads\Programowanie\Strony WWW\kanalohistorii.github.io\assets\img\Juliusz.png" alt="Juliusz_Cezar" class="Obrazek"/>
+                <a target="_self" href="assets/img/Juliusz.png">
+                    <img src="assets/img/Juliusz.png" alt="Juliusz_Cezar" class="Obrazek"/>
                 </a>
                 <div class="Opis3">Posąg przedstawiający postać Juliusza Cezara, najbardziej znanego władcę Starożytnego Rzymu.<br>(Kliknij, żeby zobaczyć w nowym oknie)</div>
             </div>
