--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
             </p>
             Tym razem zajmiemy się zagadnieniami związanymi z Imperium Karolingów. Jak wiadomo to państwo założone zostało przez Karola Wielkiego (stąd ta nazwa).
             W czasach wczesnego średniowiecza odgrywało zdecydowaną rolę w polityce europejskiej...
-            <a id="Odnosnik_A1" target="_self" href="assets/vendor/A1.html">
+            <a id="Odnosnik_A1" target="_self" href="A1.html">
                 Czytaj więcej
             </a>
         </article>
