--- a/A1.html
+++ b/A1.html
@@ -13,7 +13,7 @@
     <title>Historia jest ekstra</title>
 </head>
 
-<body style="min-height:1100px;">
+<body style="height:100%;">
     <h1 style="margin-left: 10%; margin-right: 10%;" class="Naglowek">
         O Imperium Karolingów
     </h1>
