--- a/A1.html
+++ b/A1.html
@@ -13,8 +13,9 @@
     <title>Historia jest ekstra</title>
 </head>
 
-<body style="height:100%;">
-    <h1 style="margin-left: 10%; margin-right: 10%;" class="Naglowek">
+<body>
+    <div style="height: 100%;">
+        <h1 style="margin-left: 10%; margin-right: 10%;" class="Naglowek">
         O Imperium Karolingów
     </h1>
     <p id="Art-Karolingowie">
@@ -36,5 +37,6 @@
             - "https://www.britannica.com/topic/Carolingian-dynasty"
         </li>
     </ul>
+    </div>
 </body>
 </html>
