--- a/A1.html
+++ b/A1.html
@@ -6,8 +6,8 @@
     <meta name="Keywords" content="historia, ciekawostki, XX wiek, średniowiecze, starożytność"/>
     <meta name="author" content="Łukasz Ostrowski"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <link rel="icon" type="image/x-icon" href="img/Favicon.ico"/>
-    <link rel="stylesheet" id="dashicons-css" type="text/css" media="all" href="css/style.css"/>
+    <link rel="icon" type="image/x-icon" href="assets/img/Favicon.ico"/>
+    <link rel="stylesheet" id="dashicons-css" type="text/css" media="all" href="assets/css/style.css"/>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Cinzel|Sofia"/>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.2/font/bootstrap-icons.css">
     <title>Historia jest ekstra</title>
