--- a/A1.html
+++ b/A1.html
@@ -14,8 +14,8 @@
 </head>
 
 <body>
-    <div style="height: 1100px;">
-        <h1 style="margin-left: 10%; margin-right: 10%;" class="Naglowek">
+    <div style="height: 100%;">
+        <h1 style="margin-left: 5%; margin-right: 5%;" class="Naglowek">
         O Imperium Karolingów
     </h1>
     <p id="Art-Karolingowie">
