--- a/A1.html
+++ b/A1.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-    <div style="height: 100%;">
+    <div style="min-height: 100vh;">
         <h1 style="margin-left: 5%; margin-right: 5%;" class="Naglowek">
         O Imperium Karolingów
     </h1>
